<resources>
    <string name="app_name">AndersenHomework</string>
    <string name="toast">Toast</string>
    <string name="count">Count</string>
    <string name="toast_msg">Hello, it is toast MSG!!!</string>
    <string name="_1_2_part_a_my_first_interactive_ui">1.2 Part A: My first interactive UI</string>
    <string name="_1_2_part_b_the_layout_editor">1.2 Part B: With constraint layout</string>
    <string name="_1_2_part_b_with_linear_layout">1.2 Part B: With linear layout</string>
    <string name="_1_2_part_b_with_relative_layout">1.2 Part B: With relative layout</string>
    <string name="_1_3_text_and_scrolling_views">1.3: Text and scrolling views</string>
    <string name="article_title">Android</string>
    <string name="article_subtitle">Выжимка из википедии</string>

    <string name="article_text">
        <b>Источник: </b> https://ru.wikipedia.org/wiki/Android
        \n\n
       <b>Android </b>— операционная система для смартфонов, планшетов, электронных книг, цифровых проигрывателей, наручных часов, фитнес-браслетов, игровых приставок, ноутбуков, нетбуков, смартбуков, очков Google Glass[3], телевизоров[4], проекторов и других устройств (в 2015 году появилась поддержка автомобильных развлекательных систем[5] и бытовых роботов).
        Изначально разрабатывалась компанией Android, Inc., которую затем приобрела Google[6][7]. Основана на ядре Linux[8] и собственной реализации виртуальной машины Java от Google. Впоследствии Google инициировала создание альянса Open Handset Alliance (OHA), который занимается поддержкой и дальнейшим развитием платформы.
        Android позволяет создавать Java-приложения, управляющие устройством через разработанные Google библиотеки. Android Native Development Kit позволяет портировать библиотеки и компоненты приложений, написанные на Си и других языках.
        В 86 % смартфонов, проданных во всём мире во втором квартале 2014 года, была установлена операционная система Android[9]. На конференции разработчиков в мае 2017 года Google объявила, что за всю историю Android было активировано более 2 млрд Android-устройств.

        \n\n
        <b>История</b>
        \n\n
11 июля 2005 года корпорация Google купила компанию Android, Inc.[6][7] за 130 миллионов долларов.

5 ноября 2007 года компания официально объявила о создании Open Handset Alliance (OHA) и анонсировала открытую мобильную платформу Android[10], а 12 ноября 2007 года альянс представил первую версию пакета для разработчиков Android «Early Look» SDK (известную также как Android SDK m3-rc20a) и эмулятор Android[6][11].

Кодовое имя каждой версии операционной системы Android ранее представляло собой название какого-либо десерта (это справедливо для версий с 1.5[12][13] по 9[14]). Первые буквы наименований в порядке версий соответствуют буквам латинского алфавита: 1.5 Cupcake («кекс»), 1.6 Donut («пончик»), 2.0/2.1 Eclair («эклер»), 2.2 Froyo (обозначение десерта «замороженный йогурт[en]» — от англ. frozen yogurt), 2.3 Gingerbread («имбирный пряник»), 3.0 Honeycomb («пчелиные соты»), 4.0 Ice Cream Sandwich («мороженое в вафлях[en]», в виде брикета), 4.1/4.2/4.3 Jelly Bean («желейные бобы[en]» — вид конфет), 4.4 KitKat (в честь одноимённого бренда шоколадных батончиков[15]), 5.0/5.1 Lollipop («леденец на палочке»), 6.0 Marshmallow («маршмэллоу»), 7.0 Nougat («нуга»), 8.0 Oreo (печенье «Oreo»), 9.0 Pie («пирог»). Традиция наименования версий Android в честь сладостей прекратилась с выходом Android 10[14].

23 сентября 2008 года официально вышла версия 1.0 (до этого были неофициальные 0.5, 0.6 и 0.9 версии в виде эмулятора) операционной системы[16][17], а также первый полноценный пакет разработчика SDK 1.0, Release 1[18][19] и к октябрю 2008 версия 1.0 уже дебютировала на настоящем аппарате T-Mobile G1 (также известном как HTC Dream). С момента выхода первой версии платформы произошло несколько обновлений системы. Эти обновления, как правило, касаются исправления обнаруженных ошибок и добавления новой функциональности в систему.

В 2009 году было представлено целых четыре обновления платформы. Так, в феврале вышла версия 1.1, но с исправлением различных ошибок[20]. В апреле[21] и сентябре[22] вышли ещё два обновления — 1.5 «Cupcake» («кекс») и 1.6 «Donut» («пончик»), соответственно. Обновление «Cupcake» привнесло существенные изменения: виртуальная клавиатура, воспроизведение и запись видео, браузер и другие[23]. В «Donut» впервые появились поддержка различных разрешений и плотности экрана и сетей CDMA[20]. В октябре того же года вышла версия операционной системы Android 2.0 «Eclair»[24] («эклер») с поддержкой нескольких аккаунтов Google, поддержкой браузером языка HTML5 и других нововведений, а также после небольшого обновления в пределах версии «Eclair» (2) появились «живые обои» и был видоизменён экран блокировки[20].

В середине 2010 года[25] Google представила Android версии 2.2 под наименованием «Froyo» («замороженный йогурт»), а в конце[26] 2010 года — Android 2.3 «Gingerbread» («имбирный пряник»). После обновления «Froyo» стало возможно использовать смартфон в качестве точки доступа, использовать традиционную блокировку смартфона цифровым или буквенно-цифровым паролем и другие изменения, а обновление «Gingerbread» привнесло более полный контроль над функцией копирования и вставки, улучшение управления питанием и контроля над приложениями, поддержку нескольких камер на устройстве и т. д.[20]

22 февраля 2011 года[27] была официально представлена ориентированная на интернет-планшеты платформа Android 3.0 «Honeycomb» («пчелиные соты»)[28]. Исходный код этой версии так и не был открыт компанией Google в связи с опасениями портирования её на смартфоны, для которых она не была предназначена[29].

Android 4.0 «Ice Cream Sandwich» («сэндвич с мороженым»), вышедшая 19 октября 2011 года[30], — первая универсальная платформа, которая предназначена как для планшетов, так и для смартфонов[31][32]. Также обновление принесло новый интерфейс «Holo», который использовался до Android 4.4.4 KitKat.

В июне 2012 вышло обновление под названием «Jelly Bean» (желейная конфета) с порядковым номером 4.1[33], который сменился на 4.2 вследствие небольшого обновления в конце октября того же года[34] и на 4.3 после обновления в июле 2013[35].

31 октября 2013 года Google представила следующую версию операционной системы Android 4.4, которая получила название шоколадного батончика «KitKat» по соглашению с компанией-производителем Nestlé[36]. Впервые KitKat появился на Nexus 5; эта версия Android оптимизирована для работы на более широком наборе устройств, имеющих 512 МБ ОЗУ и экран с разрешением 800x480 пикс. в качестве рекомендуемого минимума. Также, в качестве тестовой опции, в настройках разработчика стала доступна виртуальная машина ART.

25 июня 2014 Google представили Android L, доступный для разработчиков, пользователей смартфонов Nexus, а также некоторых других смартфонов[37].

15 октября 2014 года была официально анонсирована Android 5.0 Lollipop (леденец). Главные обновления системы — новый дизайн Material Design и полный переход к виртуальной машине ART. Также, если на Android-устройстве установлен пароль или графический ключ и если поблизости находятся часы хозяина устройства с Android Wear, то устройство автоматически разблокируется.

9 декабря 2014 Google заменила официальную среду разработки, основанную на Eclipse (adt-bundle), на Android Studio[38][39].

В 2015 году была анонсирована операционная система для носимых устройств Android Wear (позже Wear OS). Также на Google IO были представлены версии Android Auto (для автомобилей) и Android TV (для телевизоров), таким образом Android перестал быть операционной системой только для мобильных устройств.

29 мая 2015 Google представила Android M. По словам Google, главная цель новой операционной системы — улучшить пользовательский опыт общения со смартфоном, сделать взаимодействие интуитивнее и проще[40]. 17 августа 2015 официально стало известно, что эта версия получила название Android 6.0 Marshmallow[41](зефир).

19 мая 2016 года на конференции разработчиков Google I/O была представлена Android N, а 1 июля Google официально объявила название этой версии Android — Android 7.0 Nougat[42]. Рассылка финальной версии операционной системы стартовала 22 августа 2016 года. Поддерживаемые устройства: Huawei Nexus 6P, LG Nexus 5X, Motorola Nexus 6, HTC Nexus 9, ASUS Nexus Player, Google Pixel C и General Mobile 4G.[43]

В марте 2017 года был представлен Android O для разработчиков[44]. Пользовательская версия была выпущена 21 августа 2017 года как 8.0.0 Oreo[45]. 5 декабря 2017 года была выпущена стабильная сборка Android Oreo 8.1.

7 марта 2018 года Google выпустила Android P DP1, а первая бета-версия вышла 8 мая 2018 года, но не только для Pixel, также бету получили Sony Xperia XZ2, Nokia 7 Plus, Xiaomi Mi MIX 2s, Vivo X21, Oppo R15 Pro, Essential Phone, OnePlus 6. Рассылка релизной версии Android 9 Pie началась 6 августа 2018 года.

13 марта 2019 года Google начала открытое бета-тестирование ОС Android Q Beta 1, которая уже доступна для смартфонов Pixel всех поколений[46]. Всего компания собирается выпустить 6 бета-версий ОС. 3 апреля 2019 года вышла Android Q Beta 2, которая появилась в виде GSI-образов, кроме образов для смартфонов Pixel. С их помощью разработчики любого устройства, поддерживающего Project Treble, смогут поставить данную версию ОС для ознакомления и тестирования своих программ. Также Google начала тестирование жестов, похожих на жесты с iPhone X, ответы в мессенджерах в всплывающих окнах, не заходя в само приложение, управление воспроизведением мультимедиа в шторке и новое управление громкостью.

3 сентября 2019 года Google выпустила стабильную версию Android 10 для смартфонов семейства Pixel[47].

19 февраля 2020 года Google выпустила developer-preview-версию Android 11 для смартфонов семейства Pixel (за исключением смартфонов Pixel 1-го поколения).

19 февраля 2021 года Google выпустила Android 12 Developer Preview для смартфонов семейства Pixel, за исключением смартфонов Pixel/Pixel XL и Pixel 2/Pixel 2 XL.
    </string>
    <string name="send">Send</string>
    <string name="enter_text_here">Enter text here</string>
    <string name="_2_1_activities_and_intents">2.1: Activities and intents</string>
    <string name="reply_received">Reply Received</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="message_received">Message Received</string>
    <string name="enter_your_reply">Enter your reply</string>
    <string name="url">Введите URL</string>
    <string name="share">Поделиться</string>
    <string name="open_location">Открыть локацию</string>
    <string name="enter_location">Введите локацию</string>
    <string name="open_website">Открыть Вебсайт</string>
    <string name="share_text_with">Share this text with:</string>
    <string name="implicit_intents">Implicit intents</string>
    <string name="bonus">BONUS</string>
    <string name="statistic">Statistic</string>
    <string name="ok">ok</string>
    <string name="_0">0</string>

</resources>