<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Bonus.VoronCounterActivity">

    <TextView
        android:id="@+id/voronText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textSize="200sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/counter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="countVoron"
        android:text="@string/count"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/voronText" />

    <Button
        android:id="@+id/statistic_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openStatistic"
        android:text="@string/statistic"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/counter_button" />
</androidx.constraintlayout.widget.ConstraintLayout>