<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstLesson.PartBActivity">

    <Button
        android:id="@+id/button_toast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:background="@color/primary_color"
        android:onClick="showToast"
        android:text="@string/toast"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/button_count"
        app:layout_constraintStart_toEndOf="@+id/button_count"
        app:layout_constraintTop_toTopOf="@+id/button_count" />

    <Button
        android:id="@+id/button_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/primary_color"
        android:onClick="countUp"
        android:text="@string/count"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/button_toast"
        app:layout_constraintStart_toStartOf="@+id/button_toast"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/show_count"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FFFF00"
        android:gravity="center_vertical"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textColor="@color/primary_color"
        android:textSize="160sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_count" />
</androidx.constraintlayout.widget.ConstraintLayout>